--- a/Tech Solutions/index.html
+++ b/Tech Solutions/index.html
@@ -525,6 +525,7 @@
 
     </section>
 
+    <!-- footer for links -->
     <footer class="container-fluid w-100 bg-dark text-light mt-2">
 
       <div class="container-center text-center  m-0">
